Move profile image to top position to avoid text overlap

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -215,7 +215,7 @@ img {
 .home__img {
   position: absolute;
   right: -50px;
-  bottom: 0;
+  top: 0;
   width: 260px;
   height: auto;
   overflow: visible;
@@ -417,6 +417,7 @@ img {
   .home__img {
     width: 180px;
     right: -30px;
+    top: 0;
     height: auto;
     overflow: visible;
   }
@@ -442,6 +443,7 @@ img {
   .home__img {
     width: 300px;
     right: -40px;
+    top: 0;
     height: auto;
     overflow: visible;
   }
@@ -515,6 +517,7 @@ img {
   .home__img {
     width: 350px;
     right: -60px;
+    top: 0;
     height: auto;
     overflow: visible;
   }
